<resources>
    <string name="app_name">Фильмы</string>

    <string name="title_films">Фильмы</string>
    <string name="title_genre">Жанры</string>
    <string name="title_profile">Профиль</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Авторизоваться</string>
    <string name="token">token</string>
    <string name="register_text">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="enter_first_name">Введите фамилию</string>
    <string name="enter_middle_name">Введите имя</string>
    <string name="enter_repeat_password">Повторите пароль</string>
    <string name="film_id">film_id</string>
    <string name="category_id">category_id</string>
    <string name="map">Карта</string>
    <string name="empty_loves_films">В разделе "Понравившиеся" еще ничего нет, добавьте сюда свои любимые фильмы или сериалы</string>
    <string name="not_network_connect">Нет интернет соединения</string>
    <string name="title_search">Search</string>
    <string name="title_sort">Сортировка</string>
    <string name="by_alphabet">По алфавиту</string>
    <string name="by_year">По году</string>
    <string name="by_rating">По рейтингу</string>
    <string name="sorting_films">Сортировка фильмов</string>
    <string name="clear_sorting"><u>Очистить соортировку</u></string>
    <string name="sort_type">sort_type</string>
    <string name="enter_comment">Введите Ваш комментарий…</string>
    <string name="comment">Отправить комментарий</string>
    <string name="next">Далее</string>
    <string name="enter_last_name">Введите отчество</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="un_auth_title">Вы еще не авторизовались. Хотите это исправить?</string>
    <string name="edited_profile">Редактирование профиля</string>
    <string name="change_stars">Выберите оценку</string>
    <string name="description">Описание:</string>
    <string name="staffs">Актеры:</string>
    <string name="requests">Отзывы:</string>
</resources>