<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black_55"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/starsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/change_stars"
                    android:textColor="@color/White_100"
                    android:textSize="18sp" />

                <RatingBar
                    android:id="@+id/starsBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/Black_45"
                    android:progressTint="@color/material_color_yellow_400"
                    android:stepSize="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="8dp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/White_100"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/commentForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingHorizontal="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/enter_comment"
                    android:textColorHint="@color/Black_55">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="text|textMultiLine"
                        android:maxLines="10"
                        android:minHeight="64dp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/Black_95"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnComment"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="8dp"
                    android:text="@string/comment"
                    android:textAllCaps="false"
                    android:textColor="@color/White_100"
                    android:textSize="14sp" />

            </LinearLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>